--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
         <title> Exercise 2 </title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color: lightblue;">
         <nav class="navbar">
             <ul>
                 <li><a href="Castillo_Exer2.html">Home</a></li>
@@ -15,8 +15,10 @@
         </nav>
 
         <main>
-            <h3> This is the Home Page</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In architecto blanditiis quibusdam aliquam voluptatum voluptate nemo, libero saepe quo et magni omnis provident id ducimus aut, voluptatibus illum ipsam a?</p>
+            <h3> About </h3>
+            <center><img src="pfp.jpg" height="350px" width="350px"></center>
+            <p> I am Sean Ashley F. Castillo, currently a BS Computer Science student in the university o the Philippines Los Banos</p>
         </main>
-    </body>
+</body>
 </html>
+
