--- a/Contact.html
+++ b/Contact.html
@@ -15,8 +15,9 @@
         </nav>
 
         <main>
-            <h3> This is the Home Page</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In architecto blanditiis quibusdam aliquam voluptatum voluptate nemo, libero saepe quo et magni omnis provident id ducimus aut, voluptatibus illum ipsam a?</p>
+            <h3>Contact Page</h3>
+            <h4>Contact me through:</h4>
+            <p>Email: seanashleycastillo@gmail.com</p>
+            <p>Facebook: Sean Castle</p>
+            <p>Facebook Link: https://www.facebook.com/profile.php?id=61555419180619</p>
         </main>
-    </body>
-</html>
