--- a/Projects.html
+++ b/Projects.html
@@ -4,7 +4,7 @@
         <title> Exercise 2 </title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body style="background-color: peachpuff;">
         <nav class="navbar">
             <ul>
                 <li><a href="Castillo_Exer2.html">Home</a></li>
@@ -15,8 +15,12 @@
         </nav>
 
         <main>
-            <h3> This is the Home Page</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In architecto blanditiis quibusdam aliquam voluptatum voluptate nemo, libero saepe quo et magni omnis provident id ducimus aut, voluptatibus illum ipsam a?</p>
+            <h3> Projects </h3>
+            <center><img src="Splash2.png" height="350px" width="350px"></center>
+            <p>Big Iron is a two player real-time game that is skilled based.</p>
         </main>
-    </body>
+
+        <br>
+
+</body>
 </html>
